testdata/baselines/reference/tests_cases_conformance_moduleResolution_resolutionModeTripleSlash2.ts.ast
SourceFile
  Block
    ExpressionStatement
      StringLiteral
    ExpressionStatement
      BinaryExpression
        StringLiteral
        CommaToken
        StringLiteral
    ExpressionStatement
      BinaryExpression
        StringLiteral
        CommaToken
        StringLiteral
    Block
      ExpressionStatement
        StringLiteral
      Block
        ExpressionStatement
          StringLiteral
        ExpressionStatement
          BinaryExpression
            StringLiteral
            CommaToken
            StringLiteral
        ExpressionStatement
          StringLiteral
  ExportDeclaration
    NamedExports
  ModuleDeclaration
    DeclareKeyword
    Identifier: ' global'
    ModuleBlock
      VariableStatement
        VariableDeclarationList
          VariableDeclaration
            Identifier: ' MODULE'
            AnyKeyword
  ExportDeclaration
    NamedExports
  ModuleDeclaration
    DeclareKeyword
    Identifier: ' global'
    ModuleBlock
      VariableStatement
        VariableDeclarationList
          VariableDeclaration
            Identifier: ' SCRIPT'
            AnyKeyword
  Block
    ExpressionStatement
      StringLiteral
    Block
      ExpressionStatement
        StringLiteral
      ExpressionStatement
        BinaryExpression
          StringLiteral
          CommaToken
          StringLiteral
      ExpressionStatement
        BinaryExpression
          StringLiteral
          CommaToken
          StringLiteral
      ExpressionStatement
        BinaryExpression
          TrueKeyword
          CommaToken
          StringLiteral
      ExpressionStatement
        BinaryExpression
          TrueKeyword
          CommaToken
          StringLiteral
      ExpressionStatement
        ArrayLiteralExpression
  ExpressionStatement
    Identifier: '

// @Filename: /app.ts
/// <reference types="foo" resolution-mode="require" />
MODULE'
  ExpressionStatement
    Identifier: ' // error
SCRIPT'
  FunctionDeclaration
    Identifier: ' foo'
    Block
      ReturnStatement
        Identifier: ' SCRIPT'
